email icon link, spelling corrections, fixed PrimeKey logo, nav item order

--- a/inner_dbFicc.html
+++ b/inner_dbFicc.html
@@ -23,9 +23,9 @@
 
 		<div id="menu_icon"></div>
 		<nav>
-			<ul>
-				<li><a href="index.html" class="selected">Projects</a></li>				
-				<li><a href="about.html">Work with me</a></li>
+			<ul>				
+				<li><a href="index.html">Work with me</a></li>
+				<li><a href="projects.html" class="selected">Projects</a></li>
 				<li class="external_link"><a href="https://makeitnew.io/agile-and-ux-walk-into-a-bar-edec00d4453f" target="_blank"">Blog</a></li>
 			</ul>
 		</nav><!-- end navigation menu -->
@@ -52,7 +52,7 @@
 							
 					<ul class="btn clearfix">
 						<li><a href="inner_pacAll.html" class="previous" data-title="Previous"></a></li>
-						<li><a href="index.html" class="grid" data-title="Back to all projects"></a></li>
+						<li><a href="projects.html" class="grid" data-title="Back to all projects"></a></li>
 						<li><a href="inner_dbDistrict.html" class="next" data-title="Next"></a></li>
 					</ul>							
 					
@@ -66,7 +66,7 @@
 
 				<div class="description">
 					<h3>The project</h3>
-					<p>Danske Bank decided to do a complete overhaul of an important client-facing service - a place where they share financial/market data. I was the sole responsible UX designer, serving as the meeting grounds between development and business goals. The project involved 12 business-side stakeholders, 3 developers, 1 User Experience specialist, across three offices in Denmark, Latvia and India.</p>
+					<p>Danske Bank decided to do a complete overhaul of an important client-facing service - a place where they share financial/market data. I was the responsible UX designer, serving as the meeting ground between development and business goals. The project involved 12 business-side stakeholders, 3 developers, 1 User Experience specialist, across three offices in Denmark, Latvia and India.</p>
 
 					<p>If you want are curious about the live version, 
 						<a href="https://research.danskebank.com/research/" target="_blank" >see it here</a>.</p>
@@ -88,7 +88,7 @@
 
 				<div class="description">
 					<h3>Challenges</h3>
-					<p>Financial reserach websites contain layers of pages and tens of thousands of article pieces. There's a need for a finely tuned navigation system that enables fast, keyword-based search/filtering while at the same time staying almost completely out of sight. </p>
+					<p>Financial research websites contain layers of pages and tens of thousands of articles. There's a need for a finely tuned navigation system that enables fast, keyword-based search/filtering while at the same time staying almost completely out of sight. </p>
 					<br>
 					<p>As the basis of the website overhaul, we had to use the existing research depository which was plagued both with indecipherable design and legal conundrums.</p>
 				</div>
