--- a/inner_pacAll.html
+++ b/inner_pacAll.html
@@ -24,8 +24,8 @@
 		<div id="menu_icon"></div>
 		<nav>
 			<ul>
-				<li><a href="index.html" class="selected">Projects</a></li>				
-				<li><a href="about.html">Work with me</a></li>
+				<li><a href="index.html">Work with me</a></li>
+				<li><a href="projects.html" class="selected">Projects</a></li>
 				<li class="external_link"><a href="https://makeitnew.io/agile-and-ux-walk-into-a-bar-edec00d4453f" target="_blank"">Blog</a></li>
 			</ul>
 		</nav><!-- end navigation menu -->
@@ -53,7 +53,7 @@
 							
 					<ul class="btn clearfix">
 						<li><a href="inner_pkAll.html" class="previous" data-title="Previous"></a></li>
-						<li><a href="index.html" class="grid" data-title="Back to all projects"></a></li>
+						<li><a href="projects.html" class="grid" data-title="Back to all projects"></a></li>
 						<li><a href="inner_dbFicc.html" class="next" data-title="Next"></a></li>
 					</ul>							
 					
