--- a/inner_riksForm.html
+++ b/inner_riksForm.html
@@ -22,9 +22,8 @@
 
 		<div id="menu_icon"></div>
 		<nav>
-			<ul>
-				<li><a href="index.html" class="selected">Projects</a></li>				
-				<li><a href="about.html">Work with me</a></li>
+			<ul><li><a href="index.html">Work with me</a></li>
+				<li><a href="projects.html" class="selected">Projects</a></li>
 				<li class="external_link"><a href="https://makeitnew.io/agile-and-ux-walk-into-a-bar-edec00d4453f" target="_blank"">Blog</a></li>
 			</ul>
 		</nav><!-- end navigation menu -->
@@ -52,7 +51,7 @@
 							
 					<ul class="btn clearfix">
 						<li><a href="inner_tcAll.html" class="previous" data-title="Previous"></a></li>
-						<li><a href="index.html" class="grid" data-title="Back to all projects"></a></li>
+						<li><a href="projects.html" class="grid" data-title="Back to all projects"></a></li>
 						<li><a href="inner_tcCheckin.html" class="next" data-title="Next"></a></li>
 					</ul>							
 					
@@ -66,7 +65,7 @@
 
 				<div class="description">
 					<h3>The project</h3>
-					<p>With the rise of fiber and satellite TV, RiksTV has seen a part of its customer base shift toward other providers. This has has prompted an internal reorganization to embrace agile principles and team-based delivery, as well as to simplify internal processes from a UX perspective.</p>
+					<p>With the rise of fiber and satellite TV, RiksTV has seen a part of its customer base shift toward other providers. This has prompted an internal reorganization to embrace agile principles and team-based delivery, as well as to simplify internal processes from a UX perspective.</p>
 
 				</div>
 
@@ -85,7 +84,7 @@
 
 				<div class="description">
 					<h3>Challenges </h3>
-					<p>The project contained a large volume of work in a very short period (three weeks) during which I conducted more than a dozen interviews, 2 user testing session, and many feedback sessions to understand the reasons why are customers leaving and the limitatinos of the then-current systems in place.</p>
+					<p>The project contained a large volume of work in a very short period (three weeks) during which I conducted more than a dozen interviews, 2 user testing session, and many feedback sessions to understand the reasons why are customers leaving and the limitations of the then-current systems in place.</p>
 				</div>
 
 				<div class="image">
@@ -94,7 +93,7 @@
 				</div>
 
 				<div class="description">
-					<p>Additionally, I created a new cancellation from that makes it easier for customers to painlessly leave the service while at the same time enable RiksTV to various retention options like special deals, discounts, etc.</p>
+					<p>Additionally, I created a new cancellation form that makes it easier for customers to painlessly leave the service while at the same time emabling RiksTV to display various retention options like special deals, discounts, etc.</p>
 				</div>
 
 				<div class="image">
