--- a/inner_dbDistrict.html
+++ b/inner_dbDistrict.html
@@ -23,9 +23,9 @@
 
 		<div id="menu_icon"></div>
 		<nav>
-			<ul>
-				<li><a href="index.html" class="selected">Projects</a></li>				
-				<li><a href="about.html">Work with me</a></li>
+			<ul>				
+				<li><a href="index.html">Work with me</a></li>
+				<li><a href="projects.html" class="selected">Projects</a></li>
 				<li class="external_link"><a href="https://makeitnew.io/agile-and-ux-walk-into-a-bar-edec00d4453f" target="_blank"">Blog</a></li>
 			</ul>
 		</nav><!-- end navigation menu -->
@@ -54,7 +54,7 @@
 							
 					<ul class="btn clearfix">
 						<li><a href="inner_dbFicc.html" class="previous" data-title="Previous"></a></li>
-						<li><a href="index.html" class="grid" data-title="Back to all projects"></a></li>
+						<li><a href="projects.html" class="grid" data-title="Back to all projects"></a></li>
 						<li><a href="inner_tcAll.html" class="next" data-title="Next"></a></li>
 					</ul>							
 					
@@ -83,7 +83,7 @@
 						<div><img src="img/icon_prototyping.svg"><p>Prototyping</p></div>
 						<div><img src="img/icon_qualityassurance.svg"><p>QA</p></div>
 					</div><br>
-					<p>The financial platform is made up of an intricate array of moving parts that all have to deliver value in a uniform, omnichannel way. We conducted reserach, built wireframes, information architecture, requirement analysis, and went through high-paced UX design cycles to deliver a variety of solutions, e.g. Payments, Liquidity, Cash Flow Forecasting, and much more.</p>
+					<p>The financial platform is made up of an intricate array of moving parts that all have to deliver value in a uniform, omnichannel way. We conducted research, built wireframes, information architecture, requirement analysis, and went through high-paced UX design cycles to deliver a variety of solutions, e.g. Payments, Liquidity, Cash Flow Forecasting, and much more.</p>
 
 
 					<div class="description">
