--- a/inner_tcAll.html
+++ b/inner_tcAll.html
@@ -24,8 +24,8 @@
 		<div id="menu_icon"></div>
 		<nav>
 			<ul>
-				<li><a href="index.html" class="selected">Projects</a></li>				
-				<li><a href="about.html">Work with me</a></li>
+				<li><a href="index.html">Work with me</a></li>
+				<li><a href="projects.html" class="selected">Projects</a></li>
 				<li class="external_link"><a href="https://makeitnew.io/agile-and-ux-walk-into-a-bar-edec00d4453f" target="_blank"">Blog</a></li>
 			</ul>
 		</nav><!-- end navigation menu -->
@@ -53,7 +53,7 @@
 							
 					<ul class="btn clearfix">
 						<li><a href="inner_dbDistrict.html" class="previous" data-title="Previous"></a></li>
-						<li><a href="index.html" class="grid" data-title="Back to all projects"></a></li>
+						<li><a href="projects.html" class="grid" data-title="Back to all projects"></a></li>
 						<li><a href="inner_riksForm.html" class="next" data-title="Next"></a></li>
 					</ul>							
 					
@@ -68,7 +68,7 @@
 				<div class="description">
 					<h3>The project</h3>
 					<p>As part of their offering, Thomas Cook and Ving provide an immersive mobile experience for their customers that includes: mobile payment, web views, to do lists, calendar features, search functionality, booking management, profile management and more.</p><br>
-					<p>I worked closely with both back-and-frontend developers (in Sweden and Ukraine) as the sole resource for a variety of needs - complex wireframes, detailed interactions, overall information architecture, A/B testing, stakeholder workshops, requirement analysis, and coaching junior UX staff. I've helped improve collaboration between UX and developer teams to help both sides take ownership of the end product.</p><br>
+					<p>I worked closely with fullstack developers (in Sweden and Ukraine) as the sole resource for a variety of needs - complex wireframes, detailed interactions, overall information architecture, A/B testing, stakeholder workshops, requirement analysis, and coaching junior UX staff. I've helped improve collaboration between UX and developer teams to help both sides take ownership of the end product.</p><br>
 					<p>You can download the app on the <a href="https://itunes.apple.com/se/app/ving-sverige-flyg-och-hotel/id916676753?mt=8" target="_blank">App Store</a> and <a href="https://play.google.com/store/apps/details?id=se.thomascook.capp&hl=en" target="_blank">Google Play</a>.</p>
 
 				</div>
