--- a/inner_tcCheckin.html
+++ b/inner_tcCheckin.html
@@ -24,8 +24,8 @@
 		<div id="menu_icon"></div>
 		<nav>
 			<ul>
-				<li><a href="index.html" class="selected">Projects</a></li>				
-				<li><a href="about.html">Work with me</a></li>
+				<li><a href="index.html">Work with me</a></li>
+				<li><a href="projects.html" class="selected">Projects</a></li>
 				<li class="external_link"><a href="https://makeitnew.io/agile-and-ux-walk-into-a-bar-edec00d4453f" target="_blank"">Blog</a></li>
 			</ul>
 		</nav><!-- end navigation menu -->
@@ -54,7 +54,7 @@
 							
 					<ul class="btn clearfix">
 						<li><a href="inner_riksForm.html" class="previous" data-title="Previous"></a></li>
-						<li><a href="index.html" class="grid" data-title="Back to all projects"></a></li>
+						<li><a href="projects.html" class="grid" data-title="Back to all projects"></a></li>
 						<li><a href="inner_pkAll.html" class="next" data-title="Next"></a></li>
 					</ul>							
 					
@@ -68,7 +68,7 @@
 
 				<div class="description">
 					<h3>The project</h3>
-					<p>To offer our customers the best possible service, Ving decided to offer in-app flight checkin so that everything related to upcoming trips lives in one place. This called for extensive conceptualization, user testing, and serious creativity and negotiation to work with the checkin data providers API.</p><br>
+					<p>To offer our customers the best possible service, Ving decided to offer an in-app flight check-in feature so that everything related to upcoming trips lives in one place. This called for extensive conceptualization, user testing, and serious creativity and negotiation to work with the checkin data providers API.</p><br>
 					<p>You can download the app on the <a href="https://itunes.apple.com/se/app/ving-sverige-flyg-och-hotel/id916676753?mt=8" target="_blank">App Store</a> and <a href="https://play.google.com/store/apps/details?id=se.thomascook.capp&hl=en" target="_blank">Google Play</a>.</p>
 
 				</div>
