title, i neke gluposti

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Marin Mikulic Portfolio</title>
+	<title>The Way of Simple: most recent work from Marin Mikulic, a digital product designer</title>
 	<meta charset="utf-8">
-	<meta name="description" content="Marin Mikulic"/>
+	<meta name="description" content="The Way of Simple: most recent work from Marin Mikulic, a digital product designer"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -31,6 +31,7 @@
 			<ul class="social clearfix">
 				<li><a href="https://www.linkedin.com/in/marinmikulic/?originalSubdomain=se" class="linkedin" data-title="LinkedIn" target="_blank"></a></li>
 				<li><a href="https://medium.com/@marinmikulic" class="medium" data-title="Medium" target="_blank"></a></li>
+				<script type="text/javascript">obfuscatorEmailIcon()</script>
 			</ul><!-- end social -->
 
 		</div ><!-- end footer -->
@@ -49,7 +50,7 @@
 					<div class="description">
 						<p>Hello, I'm Marin. <br><br>
 
-						I work with digital product design at <a href="https://www.netlight.com/" target="_blank">Netlight Consulting</a> where my primary interests lie in <b>simplicity</b>, <b>end-user needs</b>, and <b>business goals</b>. I help companies focus on the user, declutter, and keep in mind that less is often more. Having worked as a system admin and a front-end developer before, I help foster a good collaboration so that UX and development are not at odds with each other. <br><br>
+						I work with digital product design at <a href="https://www.netlight.com/" target="_blank">Netlight Consulting</a> where my primary interests lie in <b>simplicity</b>, <b>end-user needs</b>, and <b>business goals</b>. I help companies focus on the user, declutter, and keep in mind that less is often more. As teammate, one of my highest priorities is helping foster a good collaboration between UX and development. <br><br>
 
 						In day to day work I do everything from strategy and user research to interaction design, quality assurance, and setting up continuous feedback loops. Check out some of <a href="projects.html">my projects here</a>.<br><br>
 
