--- a/inner_riksForm.html
+++ b/inner_riksForm.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Marin Mikulic, UX Design</title>
+	<title>The Way of Simple: most recent work from Marin Mikulic, a digital product designer</title>
 	<meta charset="utf-8">
-	<meta name="description" content="Marin Mikulic, UX Design Portfolio"/>
+	<meta name="description" content="The Way of Simple: most recent work from Marin Mikulic, a digital product designer"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -32,6 +32,7 @@
 			<ul class="social clearfix">
 				<li><a href="https://www.linkedin.com/in/marinmikulic/?originalSubdomain=se" class="linkedin" data-title="LinkedIn" target="_blank"></a></li>
 				<li><a href="https://medium.com/@marinmikulic" class="medium" data-title="Medium" target="_blank"></a></li>
+				<script type="text/javascript">obfuscatorEmailIcon()</script>
 			</ul><!-- end social -->
 
 		</div ><!-- end footer -->
