--- a/projects.html
+++ b/projects.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Marin Mikulic Portfolio</title>
+	<title>The Way of Simple: most recent work from Marin Mikulic, a digital product designer</title>
 	<meta charset="utf-8">
-	<meta name="description" content="Marin Mikulic"/>
+	<meta name="description" content="The Way of Simple: most recent work from Marin Mikulic, a digital product designer"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
